[gd_scene load_steps=5 format=2]

[ext_resource path="res://Elementos/Fases/Delegacia/DelegaciaFase2/QuebraCabeca_01.png" type="Texture" id=1]
[ext_resource path="res://Elementos/Sonoros/Clicar/Peca.wav" type="AudioStream" id=2]
[ext_resource path="res://Codigos/Objetos/QuebraCabeca.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="QuebraCabeca" type="Sprite"]
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 1 )
centered = false
hframes = 20
vframes = 20
script = ExtResource( 3 )
Movimentar = true

[node name="Transparencia" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contorno" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0, 0, 0, 1 )
border_width = 10.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Som" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Area" type="Area2D" parent="."]

[node name="Contato" type="CollisionShape2D" parent="Area"]
shape = SubResource( 1 )

[connection signal="gui_input" from="Contorno" to="." method="_arrastarQuebraCabeca"]
[connection signal="area_entered" from="Area" to="." method="_AreaEntrou"]
[connection signal="area_exited" from="Area" to="." method="_AreaSaiu"]
